fixed center align

--- a/src/app/panel-dialog/panel-dialog.component.css
+++ b/src/app/panel-dialog/panel-dialog.component.css
@@ -1,5 +1,6 @@
 .content {
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 15px;
 }
